Main card no longer overflows

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     background-color: rgba(161, 161, 161, 0.1);
     padding: 10px;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    overflow: hidden;
 }
 
 h2 {
